navBar fixed on mobile devices

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -73,7 +73,7 @@
 
 @media (max-width: $mediumScreen) { 
   .about {
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.137);
     .content {
       display: flex;
       flex-wrap: wrap;
