--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -5,6 +5,7 @@ $navBarHeight: 60px;
   @include spacing('px', 70px);
   height: 80px;
   position: fixed;
+  top: 0;
   z-index: 5;
   display: flex;
   width: 100%;
@@ -79,7 +80,7 @@ $navBarHeight: 60px;
 
 @media (max-width: 900px) { 
   .navbar {
-    background-color: red;
+    @include spacing('px', 1.5rem);
     .menu-btn {
       display: flex;
       font-size: 1.6rem;
@@ -88,10 +89,12 @@ $navBarHeight: 60px;
       z-index: 10;
     }
     nav {
+      
       ul {
         display: none;
       }
       ul.full {
+        @include spacing('py', 90px);
         position: absolute;
         background-color: $dark;
         top: 0;
@@ -100,8 +103,8 @@ $navBarHeight: 60px;
         height: 100vh;
         display: flex;
         flex-direction: column;
-        @include spacing('py', 90px);
         align-items: center;
+        justify-content: center;
         li {
           font-size: 1.5em;
           font-weight: 600;
